--- a/profile/assets/css/main.css
+++ b/profile/assets/css/main.css
@@ -3569,12 +3569,17 @@
 			color: #636363;
 		}
 
+		#placeholder {
+			width:60%;
+			height: auto;
+		}
+
 		#main header.major h2:after {
-			background-color: #dddddd;
-			background-image: -moz-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -webkit-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -ms-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
+			background-color: #1E3548;
+			background-image: -moz-linear-gradient(90deg, #1E3548, #2fe9f8);
+			background-image: -webkit-linear-gradient(90deg, #1E3548, #2fe9f8);
+			background-image: -ms-linear-gradient(90deg, #1E3548, #2fe9f8);
+			background-image: linear-gradient(90deg, #1E3548, #2fe9f8);
 		}
 
 		#main table tbody tr {
