--- a/profile/assets/css/main.css
+++ b/profile/assets/css/main.css
@@ -3571,10 +3571,10 @@
 
 		#main header.major h2:after {
 			background-color: #dddddd;
-			background-image: -moz-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -webkit-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -ms-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
+			background-image: -moz-linear-gradient(90deg, #1e3548, #2fe9f8);
+			background-image: -webkit-linear-gradient(90deg, #1e3548, #2fe9f8);
+			background-image: -ms-linear-gradient(90deg, #1e3548, #2fe9f8);
+			background-image: linear-gradient(90deg, #1e3548, #2fe9f8);
 		}
 
 		#main table tbody tr {
