commented out profile

--- a/profile/assets/css/main.css
+++ b/profile/assets/css/main.css
@@ -3051,7 +3051,7 @@
 			.spotlight .image img {
 				display: block;
 				border-radius: 100%;
-				width: 16em;
+				width: 8em;
 			}
 
 		@media screen and (max-width: 980px) {
@@ -3095,7 +3095,7 @@
 			}
 
 				.spotlight .image img {
-					width: 12em;
+					width: 8em;
 				}
 
 		}
@@ -3750,7 +3750,7 @@
 		}
 
 		@media screen and (max-width: 1280px) {
-
+/* Adjust footer size here - media screen 980px*/
 			#footer {
 				padding: 4em 4em 2em 4em ;
 			}
@@ -3759,6 +3759,7 @@
 
 		@media screen and (max-width: 980px) {
 
+/* Adjust footer size here - media screen 980px*/
 			#footer {
 				padding: 4em 3em 2em 3em ;
 				display: block;
@@ -3780,6 +3781,7 @@
 
 		@media screen and (max-width: 736px) {
 
+/* Adjust footer size here - media screen 736px*/
 			#footer {
 				padding: 3em 2em 1em 2em ;
 			}
