--- a/profile/assets/css/materialize.css
+++ b/profile/assets/css/materialize.css
@@ -4528,6 +4528,15 @@ small {
 
 .card .card-image {
   position: relative;
+
+}
+
+.card-image-overlay{
+    width: 100%; height:100%;
+    position:absolute;
+    top: 0; left:0;
+    background:rgba(0,0,0,0.2);
+    z-index: 2;
 }
 
 .card .card-image img {
@@ -4546,8 +4555,9 @@ small {
   position: absolute;
   bottom: 0;
   left: 0;
+  z-index: 3;
   max-width: 100%;
-  padding: 24px;
+  padding: 10px 24px;
   text-shadow: 1px 1px 2px black;
 }
 
