--- a/profile/assets/css/materialize.css
+++ b/profile/assets/css/materialize.css
@@ -4433,7 +4433,7 @@ small {
 .card.small, .card.medium, .card.large {
   position: relative;
   display:inline-block;
-  margin: 10px;
+  margin: 1.5%;
   overflow: hidden;
   float: left;
 }
