--- a/profile/assets/css/main.css
+++ b/profile/assets/css/main.css
@@ -20,6 +20,7 @@
 	width: 95%;
 	margin: auto;
 	overflow: auto;
+	display:none;
 }
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -3381,6 +3382,132 @@
 				}
 
 		}
+
+
+
+
+
+		#nav2 {
+			-moz-transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
+			-webkit-transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
+			-ms-transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
+			transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
+			background-color: #ffffff;
+			color: #636363;
+			/*position: absolute;*/
+			/*width: 64em;
+			max-width: calc(100% - 4em);*/
+			padding: 1em;
+			/*background-color: #f7f7f7;*/
+			border-top-left-radius: 0.25em;
+			border-top-right-radius: 0.25em;
+			cursor: default;
+			text-align: center;
+		}
+
+			#nav2 input, #nav2 select, #nav2 textarea {
+				color: #636363;
+			}
+
+			#nav2 a:hover {
+				color: #636363;
+			}
+
+			#nav2 strong, #nav2 b {
+				color: #636363;
+			}
+
+			#nav2 h1, #nav2 h2, #nav2 h3, #nav2 h4, #nav2 h5, #nav2 h6 {
+				color: #636363;
+			}
+
+			#nav2 blockquote {
+				border-left-color: #dddddd;
+			}
+
+			#nav2 code {
+				background: rgba(222, 222, 222, 0.25);
+				border-color: #dddddd;
+			}
+
+			#nav2 hr {
+				border-bottom-color: #dddddd;
+			}
+
+			#nav2 + #main {
+				padding-top: 4.25em;
+			}
+
+			#nav2 ul {
+				margin: 0;
+				padding: 0;
+				list-style: none;
+			}
+
+				#nav2 ul li {
+					-moz-transition: margin 0.2s ease;
+					-webkit-transition: margin 0.2s ease;
+					-ms-transition: margin 0.2s ease;
+					transition: margin 0.2s ease;
+					display: inline-block;
+					margin: 0 0.35em;
+					padding: 0;
+					vertical-align: middle;
+				}
+
+					#nav2 ul li a {
+						-moz-transition: font-size 0.2s ease;
+						-webkit-transition: font-size 0.2s ease;
+						-ms-transition: font-size 0.2s ease;
+						transition: font-size 0.2s ease;
+						display: inline-block;
+						height: 2.25em;
+						line-height: 2.25em;
+						padding: 0 1.25em;
+						border: 0;
+						border-radius: 8px;
+						box-shadow: inset 0 0 0 1px transparent;
+						background-color: rgba(222, 222, 222, 0.4)
+					}
+
+						#nav2 ul li a:hover {
+							background-color: rgba(222, 222, 222, 0.8);
+						}
+
+						#nav2 ul li a.active {
+							background-color: #ffffff;
+							box-shadow: none;
+						}
+
+			#nav2.alt {
+				position: fixed;
+				top: 0;
+				padding: 0.5em 1em;
+				background-color: rgba(247, 247, 247, 0.95);
+				border-top-left-radius: 0;
+				border-top-right-radius: 0;
+				z-index: 10000;
+			}
+
+				#nav2.alt ul li {
+					margin: 0 0.175em;
+				}
+
+					#nav2.alt ul li a {
+						font-size: 0.9em;
+					}
+
+			@media screen and (max-width: 736px) {
+
+				#nav2 {
+					display: none;
+				}
+
+					#nav2 + #main {
+						padding-top: 0;
+					}
+
+			}
 
 /* Main */
 
