--- a/profile/assets/css/main.css
+++ b/profile/assets/css/main.css
@@ -3033,7 +3033,10 @@
 		-webkit-align-items: center;
 		-ms-align-items: center;
 		align-items: center;
-		margin: 0 0 2em 0;
+		/*margin: 0 0 2em 0;*/
+	}
+	.spotlight h2 {
+		margin: 0;
 	}
 
 		.spotlight .content {
@@ -3041,6 +3044,8 @@
 			-webkit-flex: 1;
 			-ms-flex: 1;
 			flex: 1;
+			text-align: left;
+			padding-left: 8%;
 		}
 
 			.spotlight .content > :last-child {
@@ -3053,7 +3058,6 @@
 
 		.spotlight .image {
 			display: inline-block;
-			margin-left: 4em;
 			padding: 0.65em;
 			border-radius: 100%;
 			border: solid 1px;
@@ -3760,7 +3764,7 @@
 		}
 
 		#main > .main {
-			padding: 5em 5em 3em 5em ;
+			padding: 2.5em 5em 3em 5em ;
 			border-top: solid 1px #dddddd;
 		}
 
@@ -3787,7 +3791,7 @@
 		@media screen and (max-width: 1280px) {
 
 			#main > .main {
-				padding: 4em 4em 2em 4em ;
+				padding: 2.5em 4em 2em 4em ;
 			}
 
 				#main > .main > .image.main:first-child {
@@ -3800,7 +3804,7 @@
 		@media screen and (max-width: 980px) {
 
 			#main > .main {
-				padding: 4em 3em 2em 3em ;
+				padding: 3em 3em 2em 3em ;
 			}
 
 				#main > .main > .image.main:first-child {
@@ -3813,7 +3817,7 @@
 		@media screen and (max-width: 736px) {
 
 			#main > .main {
-				padding: 3em 2em 1em 2em ;
+				padding: 2.5em 2em 1em 2em ;
 			}
 
 				#main > .main > .image.main:first-child {
