--- a/profile/assets/css/main.css
+++ b/profile/assets/css/main.css
@@ -3033,7 +3033,7 @@
 		-webkit-align-items: center;
 		-ms-align-items: center;
 		align-items: center;
-		padding: 15px 15px 15px 30px;
+		padding: 15px 15px 15px 50px;
 		/*margin: 0 0 2em 0;*/
 	}
 	.spotlight h2 {
@@ -3046,7 +3046,7 @@
 			-ms-flex: 1;
 			flex: 1;
 			text-align: left;
-			padding-left: 8%;
+			padding-left: 6%;
 		}
 
 			.spotlight .content > :last-child {
@@ -3276,7 +3276,7 @@
 		background-color: #ffffff;
 		color: #636363;
 		/*position: absolute;*/
-		width: 64em;
+		width: 100%;
 		/*max-width: calc(100% - 4em);*/
 		padding: 1em;
 		background-color: #f7f7f7;
@@ -3377,17 +3377,7 @@
 					font-size: 0.9em;
 				}
 
-		@media screen and (max-width: 736px) {
 
-			#nav {
-				display: none;
-			}
-
-				#nav + #main {
-					padding-top: 0;
-				}
-
-		}
 
 
 
